// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pie-show-mode Renders \`pie-show-mode\` with custom props 1`] = `
<widget-settings-item-stub
  eager="true"
  title="Shares type"
>
  <div
    class="v-input mt-0 v-input--is-label-active v-input--is-dirty theme--light v-input--selection-controls v-input--radio-group v-input--radio-group--column"
  >
    <div
      class="v-input__control"
    >
      <div
        class="v-input__slot"
        style="height: auto;"
      >
        <div
          class="v-input--radio-group__input"
          role="radiogroup"
        >
          <legend
            class="v-label theme--light"
            style="left: 0px; position: relative;"
          >
            Custom label
          </legend>
          <div
            class="v-radio theme--light v-item--active"
          >
            <div
              class="v-input--selection-controls__input"
            >
              <i
                aria-hidden="true"
                class="v-icon notranslate material-icons theme--light primary--text"
              >
                radio_button_checked
              </i>
              <input
                aria-checked="true"
                name="custom_name"
                role="radio"
                type="radio"
                value="numbers"
              />
              <div
                class="v-input--selection-controls__ripple primary--text"
              />
            </div>
            <label
              class="v-label theme--light"
              style="left: 0px; position: relative;"
            >
              Numbers
            </label>
          </div>
          <div
            class="v-radio theme--light"
          >
            <div
              class="v-input--selection-controls__input"
            >
              <i
                aria-hidden="true"
                class="v-icon notranslate material-icons theme--light"
              >
                radio_button_unchecked
              </i>
              <input
                aria-checked="false"
                name="custom_name"
                role="radio"
                type="radio"
                value="percent"
              />
              <div
                class="v-input--selection-controls__ripple"
              />
            </div>
            <label
              class="v-label theme--light"
              style="left: 0px; position: relative;"
            >
              Percents
            </label>
          </div>
        </div>
      </div>
      <div
        class="v-messages theme--light"
      >
        <transition-group-stub
          class="v-messages__wrapper"
          name="message-transition"
          tag="div"
        />
      </div>
    </div>
  </div>
</widget-settings-item-stub>
`;

exports[`pie-show-mode Renders \`pie-show-mode\` with required props 1`] = `
<widget-settings-item-stub
  eager="true"
  title="Shares type"
>
  <div
    class="v-input mt-0 v-input--is-label-active v-input--is-dirty theme--light v-input--selection-controls v-input--radio-group v-input--radio-group--column"
  >
    <div
      class="v-input__control"
    >
      <div
        class="v-input__slot"
        style="height: auto;"
      >
        <div
          class="v-input--radio-group__input"
          role="radiogroup"
        >
          <div
            class="v-radio theme--light"
          >
            <div
              class="v-input--selection-controls__input"
            >
              <i
                aria-hidden="true"
                class="v-icon notranslate material-icons theme--light"
              >
                radio_button_unchecked
              </i>
              <input
                aria-checked="false"
                name="show_mode"
                role="radio"
                type="radio"
                value="numbers"
              />
              <div
                class="v-input--selection-controls__ripple"
              />
            </div>
            <label
              class="v-label theme--light"
              style="left: 0px; position: relative;"
            >
              Numbers
            </label>
          </div>
          <div
            class="v-radio theme--light v-item--active"
          >
            <div
              class="v-input--selection-controls__input"
            >
              <i
                aria-hidden="true"
                class="v-icon notranslate material-icons theme--light primary--text"
              >
                radio_button_checked
              </i>
              <input
                aria-checked="true"
                name="show_mode"
                role="radio"
                type="radio"
                value="percent"
              />
              <div
                class="v-input--selection-controls__ripple primary--text"
              />
            </div>
            <label
              class="v-label theme--light"
              style="left: 0px; position: relative;"
            >
              Percents
            </label>
          </div>
        </div>
      </div>
      <div
        class="v-messages theme--light"
      >
        <transition-group-stub
          class="v-messages__wrapper"
          name="message-transition"
          tag="div"
        />
      </div>
    </div>
  </div>
</widget-settings-item-stub>
`;
